crates/solidity-v2/testing/snapshots/cst_output/generated/from_v1/SourceUnit/TupleDeconstructionStatement/with_type/generated/0.8.30-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected CloseParen. One of AtKeyword_Unreserved, CallDataKeyword_Reserved, ErrorKeyword_Unreserved, FinneyKeyword_Unreserved, FromKeyword_Unreserved, GlobalKeyword_Unreserved, Identifier, LayoutKeyword_Unreserved, MemoryKeyword_Reserved, RevertKeyword_Unreserved, StorageKeyword_Reserved, SzaboKeyword_Unreserved, TransientKeyword_Unreserved was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/generated/from_v1/SourceUnit/TupleDeconstructionStatement/with_type/input.sol:6:30]
   │
 6 │ (bool with_type, without_type) = rhs;// <<<
   │                              ┬  
   │                              ╰── Error occurred here.
───╯
